2005-09-16  Frederic Ruaudel <grumz@grumz.net> 0.8
	
	* plugin/nautilus-actions-module.c: Fix macro name according to
the changes made for GObject default macros

	* plugin/nautilus-actions.h: Add GObject missing default macros.

2005-09-15  Frederic Ruaudel <grumz@grumz.net> 0.8

	* nact/nact.desktop.in.in: Make it fd.o compliant
	
	* nact/nautilus-actions-config.in: Fix the problem with nact not starting
when $LANG var not set (Bug #108)

2005-09-13  Frederic Ruaudel <grumz@grumz.net> 0.7

	* nact/nautilus-actions-config.in: Fix problem with new config creation

	* po/*.po:
	* po/nautilus-actions.pot:
	* nact/nautilus-actions-config.glade: Fix mistake in tooltip text, add
information about Feature #73, add missed string and fix some problem in 
the GUI.

	* nact/nautilus-actions-config.in:
	* plugin/nautilus-actions-config.h:
	* plugin/nautilus-actions-config.c:
	* plugin/nautilus-actions-test.c: Add the possibility to add several 
file patterns (Feature #73). In NACT, add several file patterns separated
by semi-colon ';'

	* configure.in: Update version number

	* nact/nautilus-actions-config.in: Fix problem with system wide config 
overwritten by user not read correctly by NACT.

	* plugin/nautilus-actions-config.c:
	* nact/nautilus-actions-config.in: Add support for xml:lang in config
files. For NACT, it is only for the reader part. If the config is saved with 
NACT only the text of the current LANG will be saved.

	* po/*.po:
	* po/nautilus-actions.pot:
	* nact/nautilus-actions-config.in: Add missing strings in NACT (description
of the schemes)

2005-09-12  Frederic Ruaudel <grumz@grumz.net> 0.7
	
	* po/*.po: Fix Bad charset due to bad LANG setting when generated po
files with msginit.

	* configure.in:
	* fr.po: Add German translation (Gabriel Meier <gabriel.meier@web.de>)

2005-09-10  Frederic Ruaudel <grumz@grumz.net> 0.7

	* fr.po: Update French translation

	* configure.in:
	* nact/nact.desktop.in.in: Fix the problem with the icon path substitution 