@@ -1,3 +1,4 @@
+#include <config.h>
 #include <libxml/parser.h>
 #include <libxml/tree.h>
 
