@@ -1,3 +1,11 @@
+2005-09-17  Rodrigo Moya <rodrigo@novell.com>
+
+	* configure.in: define DEFAULT_CONFIG_PATH.
+
+	* plugin/nautilus-actions-config.h: removed #define for DEFAULT_CONFIG_PATH.
+
+	* plugin/nautilus-actions-config.c: include "config.h"
+
 2005-09-16  Frederic Ruaudel <grumz@grumz.net> 0.8
 	
 	* plugin/nautilus-actions-module.c: Fix macro name according to
